--- a/public/stylesheets/chaos.css
+++ b/public/stylesheets/chaos.css
@@ -67,13 +67,22 @@
 	line-height: 32px;
 	border: 1px solid silver;
 	margin: 1px;
-	padding-left: 4px;
+	padding: 0 4px;
 	outline: 0;
 	list-style: none;
 }
+#players_panel #players_list li .name {
+	float: left;
+}
+
 #players_panel #players_list li.me {
-	font-weight: bold;
 	background-color: salmon;
+}
+#players_panel #players_list li.me .name {
+	font-weight: bold;
+}
+#players_panel #players_list li .self_actions {
+	float: right;
 }
 
 #events_panel {
